--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "babel-cli": "^6.26.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "express-jwt": "^5.3.0",
     "material-ui": "^1.0.0-beta.34",
