--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "material-ui-icons": "^1.0.0-beta.36",
     "mongodb": "^3.0.1",
     "node-fetch": "^2.0.0",
+    "nodemailer": "^4.6.4",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.1",
     "react": "^16.2.0",
